Adding Models and stafffolding the controller and views

--- a/WebChat/WebChat/Web.config
+++ b/WebChat/WebChat/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebChat-20160618033226.mdf;Initial Catalog=aspnet-WebChat-20160618033226;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="WebChatContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebChatContext-20160618204721; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebChatContext-20160618204721.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
