--- a/WebChat2/WebChat2/package.json
+++ b/WebChat2/WebChat2/package.json
@@ -11,9 +11,10 @@
     "prod-build": "SET NODE_ENV=production&&webpack -p --config webpack.config.js --colors"
   },
   "dependencies": {
+    "babel-polyfill": "6.13.0",
+    "marked": "^0.3.6",
     "react": "15.3.1",
-    "react-dom": "15.3.1",
-    "babel-polyfill": "6.13.0"
+    "react-dom": "15.3.1"
   },
   "devDependencies": {
     "babel-core": "6.14.0",
