--- a/WebChat2/WebChat2/package.json
+++ b/WebChat2/WebChat2/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "babel-polyfill": "6.13.0",
-    "marked": "^0.3.6",
-    "react": "15.3.1",
-    "react-dom": "15.3.1"
+    "marked": "0.3.6",
+    "react": "15.3.2",
+    "react-addons-update": "15.3.2",
+    "react-dom": "15.3.2",
+    "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
     "babel-core": "6.14.0",
@@ -22,7 +24,7 @@
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
     "webpack": "1.13.2",
-    "webpack-dev-server": "1.15.1",
+    "webpack-dev-server": "1.16.1",
     "html-webpack-plugin": "2.22.0",
     "jsx-loader": "0.13.2"
   }
